--- a/package.json
+++ b/package.json
@@ -16,12 +16,8 @@
     "jasmine-node": "~1.11.0",
     "underscore": "~1.4.2",
     "socket.io": "~0.9.11",
-    "backbone": "~0.9.2",
-    "qs": "~0.6.5",
-    "oauth": "~0.9.10",
-    "redis": "~0.8.4",
-    "redis-url": "0.1.0",
-    "request": "~2.27.0"
+    "request": "~2.27.0",
+    "newrelic": "latest"
   },
   "subdomain": "nah-amir-rajan",
   "engines": {
